--- a/.sample.env
+++ b/.sample.env
@@ -1,6 +1,7 @@
 # http://ddollar.github.com/foreman/
 RACK_ENV=development
 SECRET_KEY_BASE=development_secret
+AIRBRAKE_API_KEY=change_me
 GITHUB_SECRET_KEY=github_secret
 GITHUB_CLIENT_ID=bdc4d3930952e5df9f72
 GITHUB_CLIENT_SECRET=c20a3fd60154b57dd38009de2007a96381bfdf15
