--- a/.sample.env
+++ b/.sample.env
@@ -6,3 +6,6 @@ GITHUB_SECRET_KEY=github_secret
 GITHUB_CLIENT_ID=bdc4d3930952e5df9f72
 GITHUB_CLIENT_SECRET=c20a3fd60154b57dd38009de2007a96381bfdf15
 WEBHOOK_URL=https://example.com
+SLACK_TEAM_DOMAIN=thoughtbot
+SLACK_WEBHOOK_TOKEN=abc123
+SLACK_TEAM_ID=abc123
