Use a single webhook URL for posting to Slack
Slack's Incoming Webhooks API makes it easy
to specify a channel to post to by name.

Taking advantage of that feature means we no longer have to set up
different incoming webhook integrations for each channel - we can
use a single incoming webhook, and provide the channel name whenever we
post to Slack.

--- a/.sample.env
+++ b/.sample.env
@@ -6,3 +6,4 @@ GITHUB_SECRET_KEY=github_secret
 GITHUB_CLIENT_ID=bdc4d3930952e5df9f72
 GITHUB_CLIENT_SECRET=c20a3fd60154b57dd38009de2007a96381bfdf15
 WEBHOOK_URL=https://example.com
+SLACK_POST_WEBHOOK_URL=https://hooks.slack.com/services/abc/123
