--- a/.sample.env
+++ b/.sample.env
@@ -5,3 +5,4 @@ GITHUB_SECRET_KEY=github_secret
 GITHUB_CLIENT_ID=GITHUB_CLIENT_ID
 GITHUB_CLIENT_SECRET=GITHUB_CLIENT_SECRET
 WEBHOOK_URL=https://example.com
+GITHUB_TEAM_ID=1234
