--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,9 @@ machine:
     America/New_York
 checkout:
   post:
+    - cp .sample.env .env
+database:
+  override:
     - bin/setup
 deployment:
   production:
