--- a/.sample.env
+++ b/.sample.env
@@ -6,3 +6,4 @@ GITHUB_CLIENT_ID=GITHUB_CLIENT_ID
 GITHUB_CLIENT_SECRET=GITHUB_CLIENT_SECRET
 WEBHOOK_URL=https://example.com
 GITHUB_TEAM_ID=1234
+REPOST_THRESHOLD=30
