--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Beggar",
+  "name": "PesteR",
   "description": "A tool to help teams with pull request code reviews.",
-  "repository": "https://github.com/thoughtbot/beggar",
-  "logo": "https://raw.githubusercontent.com/thoughtbot/beggar/master/public/beggar-slack-icon.png",
+  "repository": "https://github.com/thoughtbot/pester",
+  "logo": "https://raw.githubusercontent.com/thoughtbot/pester/master/public/pester-slack-icon.png",
   "keywords": ["rails", "code-review", "pull-request"],
   "env": {
     "GITHUB_CLIENT_ID": {
